--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
+head{
+    background-color: rgb(0, 125, 139);
+}
 body{
-    background-color: burlywood;
+    background-color: rgb(8, 232, 209);
     text-align: justify;
     text-decoration-style: dashed;
 }
+h1 {
+    text-align: center;
+    color: rgb(0, 0, 0) ;
+    background-color: blanchedalmond;
+}
+
