--- a/style.css
+++ b/style.css
@@ -9,6 +9,27 @@ body{
 h1 {
     text-align: center;
     color: rgb(0, 0, 0) ;
-    background-color: blanchedalmond;
+    
 }
+.footer {
+  background-color: #0d1b2a;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+
+.icon {
+  margin: 0 10px;
+  font-size: 24px;
+  display: inline-block;
+  transition: transform 0.3s ease;
+}
+
+/* Animación al pasar el mouse */
+.icon:hover {
+  transform: scale(1.3) rotate(10deg);
+}
+
+
+
 
