--- a/style.css
+++ b/style.css
@@ -11,6 +11,28 @@ h1 {
     color: rgb(0, 0, 0) ;
     
 }
+.contenedor {
+  display: flex;          
+  justify-content: center; 
+  gap: 20px;              
+  margin-top: 50px;  
+  background-color: antiquewhite;    
+}
+
+
+.img_contenedor{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: justify;
+}
+.img_contenedor img{
+    width: 150px; 
+    height: auto;
+    border-radius: 10px; 
+    transition: transform 0.3s;
+}
+
 .footer {
   background-color: #0d1b2a;
   color: white;
@@ -25,7 +47,7 @@ h1 {
   transition: transform 0.3s ease;
 }
 
-/* Animación al pasar el mouse */
+
 .icon:hover {
   transform: scale(1.3) rotate(10deg);
 }
