--- a/style_newTravel.css
+++ b/style_newTravel.css
@@ -1,16 +1,23 @@
-h1 {
+body {
+    padding-top: 120px;
+}
+.navbar-custom h1 {
     text-align: right;
     color: rgb(0, 0, 0) ;
-    padding-right: 10px;
+    font-weight: bold;
 }
 .navbar-custom {
     position: fixed;
     top: 0;
     width: 100%;
     background-color: grey;
-    padding: 2px;
-    border-bottom: 10px solid rgb(165, 165, 165)
+    padding: 0px 20px;
+    border-bottom: 10px solid rgb(165, 165, 165);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-body {
-    padding-top: 100px;
+.navbar-custom input[type="text"] {
+    height: 30px;
+    border-radius: 10px;
 }
