--- a/style.css
+++ b/style.css
@@ -1,40 +1,45 @@
-head{
-    background-color: rgb(0, 125, 139);
+header{
+  
+  background-color:rgb(232, 172, 8) ;
+  color: rgb(251, 251, 251);
 }
+#cabecera{
+  margin-bottom: 100px;
+  margin-left: 40px;
+}
+
 body{
-    background-color: rgb(8, 232, 209);
+    background-color: rgb(121, 157, 249);
     text-align: justify;
-    text-decoration-style: dashed;
+     
 }
 h1 {
     text-align: center;
-    color: rgb(0, 0, 0) ;
+    color: rgb(255, 255, 255) ;
     
 }
-.contenedor {
-  display: flex;          
-  justify-content: center; 
-  gap: 20px;              
-  margin-top: 50px;  
-  background-color: antiquewhite;    
+.btn-primary{
+   background-color: rgb(232, 172, 8);
+  border: 4px;
+  margin-bottom: 40px;
+}
+
+.card-img-top {
+  width: 100%;
+  height: 220px;
+  object-fit: cover;
+  transition: transform 0.3s ease;
+  border-radius: 10px 10px 0 0;
+}
+
+.card-img-top:hover {
+  transform: scale(1.1);
 }
 
 
-.img_contenedor{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: justify;
-}
-.img_contenedor img{
-    width: 150px; 
-    height: auto;
-    border-radius: 10px; 
-    transition: transform 0.3s;
-}
 
-.footer {
-  background-color: #0d1b2a;
+footer {
+  background-color: rgb(104, 104, 104);
   color: white;
   text-align: center;
   padding: 20px;
