--- a/style_newTravel.css
+++ b/style_newTravel.css
@@ -20,6 +20,8 @@ body {
 .navbar-custom input[type="text"] {
     height: 30px;
     border-radius: 10px;
+    flex: 1 1 200px;
+    max-width: 300px;
 }
 form {
     display: flex;
@@ -29,6 +31,7 @@ form {
 .form-align {
     display: flex;
     justify-content: center;
+    padding-bottom: 80px;
 }
 .form-container {
     display: flex;
@@ -42,10 +45,31 @@ form {
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
     width: 450px;
     flex-direction: column;
+    flex-wrap: wrap;
 }
 .form-container h2 {
     text-align: center;
     margin-bottom: 20px;
     font-weight: bold;
 
+}
+.checkbox-group {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+footer {
+    background-color: rgb(104, 104, 104);
+    color: white;
+    text-align: center;
+    padding: 20px;
+}
+.icon {
+    margin: 0 10px;
+    font-size: 24px;
+    display: inline-block;
+    transition: transform 0.3s ease;
+}
+.icon:hover {
+    transform: scale(1.3) rotate(10deg);
 }
