--- a/style_detalle.css
+++ b/style_detalle.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 1000;
 }
 .navbar-custom input[type="text"] {
     height: 30px;
