--- a/style_newTravel.css
+++ b/style_newTravel.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .navbar-custom input[type="text"] {
     height: 30px;
