--- a/style.css
+++ b/style.css
@@ -10,11 +10,34 @@ header{
   margin-right: 40px;
   font-family: Verdana;
 }
-
 body{
     font-family: Verdana;
     background-color: rgb(121, 157, 249);
     text-align: justify; 
+    padding-top: 120px;
+}
+.navbar-custom h1 {
+    text-align: right;
+    color: rgb(255, 255, 255) ;
+    font-weight: bold;
+}
+.navbar-custom {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: rgb(104, 104, 104);
+    padding: 0px 20px;
+    border-bottom: 10px solid rgb(67, 66, 66);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.navbar-custom input[type="text"] {
+    height: 30px;
+    border-radius: 10px;
+    flex: 1 1 200px;
+    max-width: 300px;
 }
 h1 {
     text-align: center;
