--- a/style_detalle.css
+++ b/style_detalle.css
@@ -91,3 +91,40 @@ footer {
 .social-icons .icon:hover {
     transform: scale(1.2)
 }
+
+
+form {
+    display: flex;
+    flex-direction: column; /* apila los hijos verticalmente */
+    gap: 15px; /* espacio entre cada campo */
+}
+.form-align {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 80px;
+}
+.form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(205, 205, 205);
+    padding: 30px;
+    border-radius: 15px;
+    border-color: black;
+    border: 2px solid;
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+    width: 450px;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.form-container h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: bold;
+
+}
+.checkbox-group {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
