--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
-header{
-  
-  background-color:rgb(232, 172, 8) ;
-  color: rgb(251, 251, 251);
-}
 #cabecera{
-  margin-top: 100px;
   margin-bottom: 100px;
   margin-left: 40px;
   margin-right: 40px;
@@ -83,6 +77,22 @@ footer {
   transform: scale(1.3) rotate(10deg);
 }
 
-
-
+.button{
+    border-radius: 12px; 
+    font-family: 'poppins', sans-serif;
+}
+.button:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+    border-radius: 12px; 
+}
+.dropdown button{
+    border-radius: 12px; 
+    font-family: 'poppins', sans-serif;
+}
+.dropdown button:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+    border-radius: 12px; 
+}
 
