--- a/style_newTravel.css
+++ b/style_newTravel.css
@@ -76,3 +76,16 @@ footer {
 .icon:hover {
     transform: scale(1.3) rotate(10deg);
 }
+.dropdown button{
+    border-radius: 12px; 
+    font-family: 'poppins', sans-serif;
+}
+.dropdown button:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+    border-radius: 12px; 
+}
+.button{
+    border-radius: 12px; 
+    font-family: 'poppins', sans-serif;
+}
