--- a/style_detalle.css
+++ b/style_detalle.css
@@ -95,8 +95,8 @@ footer {
 
 form {
     display: flex;
-    flex-direction: column; /* apila los hijos verticalmente */
-    gap: 15px; /* espacio entre cada campo */
+    flex-direction: column; 
+    gap: 15px; 
 }
 .form-align {
     display: flex;
