--- a/style_newTravel.css
+++ b/style_newTravel.css
@@ -18,6 +18,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 1000;
     flex-wrap: wrap;
 }
 .navbar-custom input[type="text"] {
@@ -88,4 +89,9 @@ footer {
 .button{
     border-radius: 12px; 
     font-family: 'poppins', sans-serif;
+}
+.button:hover {
+    background-color: rgb(255, 255, 255);
+    color: black;
+    border-radius: 12px; 
 }
