--- a/style_detalle.css
+++ b/style_detalle.css
@@ -64,32 +64,45 @@ body {
 }
 
 footer {
+    
+    padding: 30px;
     background-color: rgb(104, 104, 104);
     color: white;
-    text-align: center;
-    padding: 20px;
+    font-family: Verdana;
 }
+
+
+footer [class*="col-"] {
+    text-align: center;
+}
+
+footer p {
+    margin: 0;
+    white-space: nowrap; 
+}
+
+
+.footer-icons{
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+
+
+.footer-text{
+    margin-top: 15px;
+    padding-top: 10px;
+}
+
 
 .icon {
     margin: 0 10px;
     font-size: 24px;
-    display: inline-block;
     transition: transform 0.3s ease;
 }
 
 .icon:hover {
     transform: scale(1.3) rotate(10deg);
-}
-
-.social-icons .icon {
-    font-size: 1.5rem;
-    margin: 0 10px;
-    transition: transform 0.3s;
-    display: inline-block;
-}
-
-.social-icons .icon:hover {
-    transform: scale(1.2)
 }
 
 form {
