--- a/style_main.css
+++ b/style_main.css
@@ -62,26 +62,45 @@ h1 {
 
 
 footer {
-  background-color: rgb(104, 104, 104);
-  color: white;
-  text-align: center;
-  padding: 20px;
-  font-family: Verdana;
-
+    
+    padding: 30px;
+    background-color: rgb(104, 104, 104);
+    color: white;
+    font-family: Verdana;
 }
 
+
+footer [class*="col-"] {
+    text-align: center;
+}
+
+footer p {
+    margin: 0;
+    white-space: nowrap; 
+}
+
+
+.footer-icons{
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+
+
+.footer-text{
+    margin-top: 15px;
+    padding-top: 10px;
+}
 
 
 .icon {
-  margin: 0 10px;
-  font-size: 24px;
-  display: inline-block;
-  transition: transform 0.3s ease;
+    margin: 0 10px;
+    font-size: 24px;
+    transition: transform 0.3s ease;
 }
 
-
 .icon:hover {
-  transform: scale(1.3) rotate(10deg);
+    transform: scale(1.3) rotate(10deg);
 }
 
 .button{
