--- a/style_detalle.css
+++ b/style_detalle.css
@@ -128,6 +128,7 @@ form {
     width: 450px;
     flex-direction: column;
     flex-wrap: wrap;
+    max-width: 90%;
 }
 .form-container h2 {
     text-align: center;
@@ -156,4 +157,11 @@ form {
     background-color: rgb(160, 159, 159);
     color: black;
     border-radius: 12px; 
+}
+form input,
+form select,
+form textarea {
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
 }
