--- a/style_newTravel.css
+++ b/style_newTravel.css
@@ -50,6 +50,7 @@ form {
     width: 450px;
     flex-direction: column;
     flex-wrap: wrap;
+    max-width: 90%;
 }
 .form-container h2 {
     text-align: center;
@@ -120,4 +121,11 @@ footer p {
     background-color: rgb(255, 255, 255);
     color: black;
     border-radius: 12px; 
+}
+form input,
+form select,
+form textarea {
+    width: 100%;
+    max-width: 100%;
+    box-sizing: border-box;
 }
