plantilla de datos

--- a/BD/ejer1-board/views/new_travel.html
+++ b/BD/ejer1-board/views/new_travel.html
@@ -44,8 +44,8 @@
                 <label for="t_trip">Type of trip:</label>
                 <select id="t_trip" name="t_trip">
                     <option value="">Select a type</option>
-                    <option value="aventura">Family</option>
-                    <option value="relax">Leisure</option>
+                    <option value="family">Family</option>
+                    <option value="leisure">Leisure</option>
                     <option value="cultural">Cultural</option>
                 </select>
 
