cambio de ubicacion de las imagenes de uploads a images , and changes in app.js , router, script, main and footer for the correct implementation of the pagination and filtering, and also adding example trips to the database

--- a/BD/ejer1-board/views/main.html
+++ b/BD/ejer1-board/views/main.html
@@ -51,4 +51,12 @@
     </nav>
 </section>
 
+<script>
+
+    window.INITIAL_DATA = {
+        totalPages: '{{totalPages}}',
+        currentPage: '{{currentPage}}'
+    };
+</script>
+
 {{> footer}}
