--- a/BD/ejer1-board/views/partials/footer.html
+++ b/BD/ejer1-board/views/partials/footer.html
@@ -29,5 +29,6 @@
     <p class="footer-text text-center">© 2025 GoTravel - All rights reserved</p>
 </footer>
 
+<script src="/script.js"></script>
 </body>
 </html>
