link the add new trip button to the new_travel.html

--- a/BD/ejer1-board/views/main.html
+++ b/BD/ejer1-board/views/main.html
@@ -1,7 +1,7 @@
 {{> header}}
 
 <section id="cabecera">
-    <a href="new_travel.html" class="btn button btn-dark" id="b1">Add new trip</a>
+    <a href="/new" class="btn button btn-dark" id="b1">Add new trip</a>
     <h2>Traveling was never so easy.</h2>
     <p>In Eurotravel we offered excursions and adventures ready to enjoy. You only have to choose the destiny, we take care of the trouble. <strong>¡Get ready to write your next story with us!</strong></p>
 </section>
