--- a/BD/ejer1-board/views/main.html
+++ b/BD/ejer1-board/views/main.html
@@ -6,19 +6,35 @@
     <p>In Eurotravel we offered excursions and adventures ready to enjoy. You only have to choose the destiny, we take care of the trouble. <strong>¡Get ready to write your next story with us!</strong></p>
 </section>
 
-<section id="search-filter" class="container my-4">
-    <div class="row mb-3">
-        <div class="col-12 col-md-6 mb-3">
-            <input type="text" id="trip-search" class="form-control" placeholder="Search trip by Name or Title...">
-        </div>
-        
-        <div class="col-12 col-md-6 d-flex justify-content-md-end">
-            <button class="btn btn-outline-primary me-2 filter-btn" data-category="Adventure">Adventure</button>
-            <button class="btn btn-outline-primary me-2 filter-btn" data-category="Culture">Culture</button>
-            <button class="btn btn-outline-primary filter-btn" data-category="Relax">Relax</button>
-        </div>
-    </div>
-</section>
+<form action="/" method="GET" class="d-flex mb-4">
+    <input class="form-control me-2" 
+           type="search" 
+           placeholder="Busque su viaje" 
+           name="searchQuery"
+           value="{{searchTerm}}"> {{#category}}
+    <input type="hidden" name="category" value="{{category}}">
+    {{/category}}
+            
+    <button class="btn btn-outline-success" type="submit">Buscar</button>
+</form>
+
+<div class="mb-4">
+    <h5>Categorías:</h5>
+    <a href="/?category=Adventure&searchQuery={{searchTerm}}" 
+       class="btn {{#pagination.isCategoryActive.Adventure}}btn-primary{{else}}btn-outline-primary{{/pagination.isCategoryActive.Adventure}}">
+       Adventure
+    </a>
+    <a href="/?category=Culture&searchQuery={{searchTerm}}" 
+       class="btn {{#pagination.isCategoryActive.Culture}}btn-primary{{else}}btn-outline-primary{{/pagination.isCategoryActive.Culture}}">
+       Culture
+    </a>
+    <a href="/?category=Relax&searchQuery={{searchTerm}}" 
+       class="btn {{#pagination.isCategoryActive.Relax}}btn-primary{{else}}btn-outline-primary{{/pagination.isCategoryActive.Relax}}">
+       Relax
+    </a>
+    
+    <a href="/" class="btn btn-outline-danger">Limpiar filtros</a>
+</div>
 
 <section class="container my-5">
     <h2 class="">TRIPS</h2>
@@ -28,13 +44,13 @@
         {{#trips}}
         <div class="col-lg-4 col-md-6 col-sm-12">
             <div class="card h-100 shadow-sm">
-                <img src="/uploads/{{image}}" class="card-img-top" alt="{{Title}}">
+                <img src="/uploads/{{image}}" class="card-img-top" alt="{{name}}">
                 <div class="card-body d-flex flex-column">
-                    <h5 class="card-title">{{Title}} ({{Main_city}})</h5>
+                    <h5 class="card-title">{{name}}</h5>
                     <p class="card-text flex-grow-1">{{description}}...</p>
                     <span class="badge bg-primary align-self-start mb-2">{{t_trip}}</span>
                     <p class="card-text text-end h4"><strong>{{price}}€</strong></p>
-                    <a href="#" class="btn btn-dark mt-auto">Ver Detalles</a> 
+                    <a href="/trip/{{_id}}" class="btn btn-dark mt-auto">Ver Detalles</a> 
                 </div>
             </div>
         </div>
@@ -46,17 +62,34 @@
     </div>
     
     <nav aria-label="Trip pagination" class="mt-5">
-        <ul class="pagination justify-content-center" id="pagination-controls">
+        <ul class="pagination justify-content-center">
+            
+            {{#pagination.hasPrev}}
+                <li class="page-item">
+                    <a class="page-link" href="/?page={{pagination.prevPage}}&searchQuery={{searchTerm}}&category={{category}}">Anterior</a>
+                </li>
+            {{/pagination.hasPrev}}
+            {{^pagination.hasPrev}}
+                <li class="page-item disabled"><span class="page-link">Anterior</span></li>
+            {{/pagination.hasPrev}}
+
+            {{#pagination.pages}}
+                <li class="page-item {{#isCurrent}}active{{/isCurrent}}">
+                    <a class="page-link" href="/?page={{number}}&searchQuery={{searchTerm}}&category={{category}}">{{number}}</a>
+                </li>
+            {{/pagination.pages}}
+            
+            {{#pagination.hasNext}}
+                <li class="page-item">
+                    <a class="page-link" href="/?page={{pagination.nextPage}}&searchQuery={{searchTerm}}&category={{category}}">Siguiente</a>
+                </li>
+            {{/pagination.hasNext}}
+            {{^pagination.hasNext}}
+                <li class="page-item disabled"><span class="page-link">Siguiente</span></li>
+            {{/pagination.hasNext}}
+
         </ul>
     </nav>
 </section>
-
-<script>
-
-    window.INITIAL_DATA = {
-        totalPages: '{{totalPages}}',
-        currentPage: '{{currentPage}}'
-    };
-</script>
 
 {{> footer}}
