--- a/BD/ejer1-board/views/new_travel.html
+++ b/BD/ejer1-board/views/new_travel.html
@@ -2,7 +2,7 @@
 
 <div class="form-align">
     <div class="form-container">
-        <h2>{{#isEditing}}Edit Trip: {{formData.name}}{{else}}New trip{{/isEditing}}</h2>
+        <h2>{{#isEditing}}Edit Trip: {{formData.name}}{{else}}New Trip{{/isEditing}}</h2>
 
         {{#errors}}
         <div class="alert alert-danger" style="color: red; border: 1px solid red; padding: 10px; border-radius: 5px; margin-bottom: 15px;">
