cambio minimo en footer y pruebas funcionalidad

--- a/BD/ejer1-board/views/partials/footer.html
+++ b/BD/ejer1-board/views/partials/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="row g-4 d-flex justify-content-center">
         <div class="col-12 col-sm-6 col-lg-4 text-center">
-            <p><strong>EuroTravel</strong> · Madrid, Spain</p>
+            <p><strong>GoTravel</strong> · Madrid, Spain</p>
         </div>
         <div class="col-12 col-sm-6 col-lg-4 text-center">
             <p>✉️ info@gotravel.com </p>
